feat: finalizando algumas padronizacoes e assinaturas @